Added basics wireless project. Removed .metadata files and updated gitignore.

--- a/Simulation/OMNeT++/inet/.cproject
+++ b/Simulation/OMNeT++/inet/.cproject
@@ -648,4 +648,5 @@
 			<resource resourceType="PROJECT" workspacePath="/inet"/>
 		</configuration>
 	</storageModule>
+	<storageModule moduleId="org.eclipse.cdt.internal.ui.text.commentOwnerProjectMappings"/>
 </cproject>
