Pulled full wireless simulation tutorial code into project. Refactored into a more coherent layout and made some trivial changes. Intending to transform current configuration into base for T/CDMA simulation.

--- a/Simulation/OMNeT++/CubeSatNetworks/omnetpp.ini
+++ b/Simulation/OMNeT++/CubeSatNetworks/omnetpp.ini
@@ -1,26 +1,134 @@
-[Config Wireless01]
-description = Two hosts communicating wirelessly
-network = WirelessA
-sim-time-limit = 25s
+[Config BaseConfig]
+network = Base
+sim-time-limit = 10s
 
+#
+# Network Parameters
+#
+#Base.hostType = "WirelessHost"
+*.hostType = "AODVRouter"
+#Base.mediumType = "IdealRadioMedium"
+*.mediumType = "APSKScalarRadioMedium"
 *.host*.networkLayer.arpType = "GlobalARP"
 
-*.hostA.numUdpApps = 1
-*.hostA.udpApp[0].typename = "UDPBasicApp"
-*.hostA.udpApp[0].destAddresses = "hostB"
-*.hostA.udpApp[0].destPort = 5000
-*.hostA.udpApp[0].messageLength = 1000B
-*.hostA.udpApp[0].sendInterval = exponential(12ms)
-*.hostA.udpApp[0].packetName = "UDPData"
+#
+# Applications
+#
+# --- Master 0
+*.hostM0.numUdpApps = 1
+*.hostM0.udpApp[0].typename = "UDPBasicApp"
+*.hostM0.udpApp[0].destAddresses = "hostM1"
+*.hostM0.udpApp[0].destPort = 5000
+*.hostM0.udpApp[0].messageLength = 1000B
+*.hostM0.udpApp[0].sendInterval = exponential(12ms)
+*.hostM0.udpApp[0].packetName = "UDPData"
+# --- Master 1
+*.hostM1.numUdpApps = 1
+*.hostM1.udpApp[0].typename = "UDPSink"
+*.hostM1.udpApp[0].localPort = 5000
 
-*.hostB.numUdpApps = 1
-*.hostB.udpApp[0].typename = "UDPSink"
-*.hostB.udpApp[0].localPort = 5000
+#
+# Interfaces
+#
+#*.host*.wlan[0].typename = "IdealWirelessNic"
+*.host*.wlan[0].typename = "WirelessNic"
+#*.host*.wlan[0].radioType = "IdealRadio"
+*.host*.wlan[0].radioType = "APSKScalarRadio"
+*.host*.wlan[0].macType = "CsmaCaMac"
+# !!! *.host*.wlan[0].macType = "LMacLayer"
 
-*.host*.wlan[0].typename = "IdealWirelessNic"
-*.host*.wlan[0].mac.useAck = false
-*.host*.wlan[0].mac.fullDuplex = false
-*.host*.wlan[0].radio.transmitter.communicationRange = 500m
-*.host*.wlan[0].radio.receiver.ignoreInterference = true
+# --- MAC 
+#*.host*.wlan[0].mac.useAck = false
+*.host*.wlan[0].mac.useAck = true
+*.host*.wlan[0].mac.fullDuplex = true # !!! Need to check docs
+*.host*.wlan[0].mac.maxQueueSize = 10
 
+# --- Radio
+#*.host*.wlan[0].radio.transmitter.communicationRange = 500m
+*.host*.wlan[0].radio.transmitter.communicationRange = 250m
+*.host*.wlan[0].radio.displayInterferenceRange = false
+#*.hostM0.wlan[0].radio.displayInterferenceRange = true
+*.hostM1.wlan[0].radio.displayCommunicationRange = true
+#*.hostS00.wlan[0].radio.displayCommunicationRange = true
+
+# --- Radio:Medium
+*.radioMedium.backgroundNoise.power = -90dBm
+*.radioMedium.mediumLimitCache.carrierFrequency = 2GHz
+*.radioMedium.pathLossType = "TwoRayGroundReflection"
+
+# --- Radio:Interference
+#*.host*.wlan[0].radio.receiver.ignoreInterference = true
+*.host*.wlan[0].radio.receiver.ignoreInterference = false
+*.host*.wlan[0].radio.transmitter.interferenceRange = 500m
+
+# --- Radio:Realism
+*.host*.wlan[0].radio.carrierFrequency = 2GHz
+*.host*.wlan[0].radio.bandwidth = 2MHz
+*.host*.wlan[0].radio.transmitter.power = 1.4mW
+*.host*.wlan[0].radio.transmitter.preambleDuration = 10us
+*.host*.wlan[0].radio.transmitter.headerBitLength = 0b
+*.host*.wlan[0].radio.receiver.sensitivity = -85dBm
+*.host*.wlan[0].radio.receiver.energyDetection = -85dBm
+*.host*.wlan[0].radio.receiver.snirThreshold = 4dB
+
+# --- Radio:Antenna
+*.host*.wlan[0].radio.antennaType = "ConstantGainAntenna"
+*.host*.wlan[0].radio.antenna.gain = 3dB
+
+# --- Radio:Energy
+*.host*.wlan[0].radio.energyConsumerType = "StateBasedEnergyConsumer"
+*.host*.wlan[0].radio.energyConsumer.offPowerConsumption = 0mW
+*.host*.wlan[0].radio.energyConsumer.sleepPowerConsumption = 1mW
+*.host*.wlan[0].radio.energyConsumer.switchingPowerConsumption = 1mW
+*.host*.wlan[0].radio.energyConsumer.receiverIdlePowerConsumption = 2mW
+*.host*.wlan[0].radio.energyConsumer.receiverBusyPowerConsumption = 5mW
+*.host*.wlan[0].radio.energyConsumer.receiverReceivingPowerConsumption = 10mW
+*.host*.wlan[0].radio.energyConsumer transmitterIdlePowerConsumption = 2mW
+*.host*.wlan[0].radio.energyConsumer.transmitterTransmittingPowerConsumption = 100mW
+
+# --- General
 *.host*.**.bitrate = 1Mbps
+*.host*.energyStorageType = "IdealEnergyStorage"
+
+#
+# Routing
+#
+*.host*.forwarding = true
+*.configurator.config = xml("<config><interface hosts='**' address='10.0.0.x' netmask='255.255.255.0'/><autoroute metric='errorRate'/></config>")
+*.configurator.addStaticRoutes = false
+*.configurator.optimizeRoutes = false
+*.host*.routingTable.netmaskRoutes = ""
+
+#
+# Mobility
+#
+*.host*.mobility.initialZ = 1.7m
+*.hostS*.mobilityType = "LinearMobility"
+*.hostS*.mobility.speed = 12mps
+*.hostS*.mobility.angle = 270deg
+
+#
+# Visualization
+#
+*.visualizer.sceneVisualizer.descriptionFigure = "title"
+#*.visualizer.mediumVisualizer.displaySignals = true
+*.visualizer.mediumVisualizer.displaySignals = false
+*.visualizer.mediumVisualizer.signalPropagationUpdateInterval = 100ns
+*.visualizer.physicalLinkVisualizer.packetNameFilter = "UDPData*"
+#*.visualizer.dataLinkVisualizer.packetNameFilter = "UDPData*"
+#*.visualizer.dataLinkVisualizer.packetNameFilter = ""
+*.visualizer.dataLinkVisualizer.packetNameFilter = "AODV*"
+*.visualizer.networkRouteVisualizer.packetNameFilter = "UDPData*"
+*.visualizer.mobilityVisualizer.displayMovementTrail = true
+
+#
+# Obstacles
+#
+*.physicalEnvironment.config = xmldoc("walls.xml")
+*.radioMedium.obstacleLossType = "IdealObstacleLoss"
+
+#
+# Environment
+#
+*.physicalEnvironment.groundType = "FlatGround"
+*.physicalEnvironment.ground.elevation = 0m
