--- a/Simulation/OMNeT++/CubeSatNetworks/.tkenvrc
+++ b/Simulation/OMNeT++/CubeSatNetworks/.tkenvrc
@@ -1,4 +1,4 @@
 # Partial OMNeT++/Tkenv config file -- see $HOME/.tkenvrc as well
-config default-configname	{Wireless01}
+config default-configname	{BaseConfig}
 config default-runnumber	{0}
 
