AODVRouter master nodes with basic IPv4 addresses. Nodes use UDP app to communicate. Node NICs uses ideal radios and LMAC successfully. The LMAC exchange is currently extremely long. Must add oracle.

--- a/Simulation/OMNeT++/CubeSatNetworks/omnetpp.ini
+++ b/Simulation/OMNeT++/CubeSatNetworks/omnetpp.ini
@@ -1,134 +1,139 @@
 [Config BaseConfig]
 network = Base
-sim-time-limit = 10s
+description = "Lightweight mac with ideal radio"
+sim-time-limit = 60s
+
+num-rngs = 3
+**.mobility.rng-0 = 1
+**.wlan[*].mac.rng-0 = 2
+
+*.numMasters = 2
 
 #
 # Network Parameters
 #
-#Base.hostType = "WirelessHost"
-*.hostType = "AODVRouter"
-#Base.mediumType = "IdealRadioMedium"
-*.mediumType = "APSKScalarRadioMedium"
-*.host*.networkLayer.arpType = "GlobalARP"
+*.radioMediumType = "IdealRadioMedium"
+#*.radioMediumType = "APSKScalarRadioMedium"
+#*.host*.networkLayer.arpType = "GlobalARP" # N/A
 
 #
 # Applications
 #
+*.nodeMaster[*].numUdpApps = 1
 # --- Master 0
-*.hostM0.numUdpApps = 1
-*.hostM0.udpApp[0].typename = "UDPBasicApp"
-*.hostM0.udpApp[0].destAddresses = "hostM1"
-*.hostM0.udpApp[0].destPort = 5000
-*.hostM0.udpApp[0].messageLength = 1000B
-*.hostM0.udpApp[0].sendInterval = exponential(12ms)
-*.hostM0.udpApp[0].packetName = "UDPData"
+*.nodeMaster[0].udpApp[0].typename = "UDPBasicApp"
+*.nodeMaster[0].udpApp[0].destAddresses = "nodeMaster[1]"
+*.nodeMaster[0].udpApp[0].destPort = 5000
+*.nodeMaster[0].udpApp[0].messageLength = 1000B
+*.nodeMaster[0].udpApp[0].sendInterval = exponential(12ms)
+*.nodeMaster[0].udpApp[0].packetName = "UDPData"
+*.nodeMaster[0].udpApp[0].startTime = 5s
 # --- Master 1
-*.hostM1.numUdpApps = 1
-*.hostM1.udpApp[0].typename = "UDPSink"
-*.hostM1.udpApp[0].localPort = 5000
+*.nodeMaster[1].udpApp[0].typename = "UDPSink"
+*.nodeMaster[1].udpApp[0].localPort = 5000
 
 #
-# Interfaces
+# NIC
 #
-#*.host*.wlan[0].typename = "IdealWirelessNic"
-*.host*.wlan[0].typename = "WirelessNic"
-#*.host*.wlan[0].radioType = "IdealRadio"
-*.host*.wlan[0].radioType = "APSKScalarRadio"
-*.host*.wlan[0].macType = "CsmaCaMac"
-# !!! *.host*.wlan[0].macType = "LMacLayer"
-
-# --- MAC 
-#*.host*.wlan[0].mac.useAck = false
-*.host*.wlan[0].mac.useAck = true
-*.host*.wlan[0].mac.fullDuplex = true # !!! Need to check docs
-*.host*.wlan[0].mac.maxQueueSize = 10
+*.node*[*].wlan[*].typename = "WirelessNic"
+*.node*[*].wlan[*].macType = "LMacLayer"
+*.node*[*].wlan[*].mac.numSlots = 2
+#*.master[*].wlan[0].macType = "CsmaCaMac"
 
 # --- Radio
-#*.host*.wlan[0].radio.transmitter.communicationRange = 500m
-*.host*.wlan[0].radio.transmitter.communicationRange = 250m
-*.host*.wlan[0].radio.displayInterferenceRange = false
-#*.hostM0.wlan[0].radio.displayInterferenceRange = true
-*.hostM1.wlan[0].radio.displayCommunicationRange = true
-#*.hostS00.wlan[0].radio.displayCommunicationRange = true
+*.node*[*].wlan[*].radioType = "IdealRadio"
+#*.node*[*].wlan[*].radioType = "APSKScalarRadio"
+#**.wlan[0].radio.displayInterferenceRange = true
+#**.wlan[0].radio.displayCommunicationRange = true
 
-# --- Radio:Medium
-*.radioMedium.backgroundNoise.power = -90dBm
-*.radioMedium.mediumLimitCache.carrierFrequency = 2GHz
-*.radioMedium.pathLossType = "TwoRayGroundReflection"
+# --- Radio:Medium (APSKScalarRadioMedium)
+#*.radioMedium.backgroundNoise.power = -90dBm
+#*.radioMedium.mediumLimitCache.carrierFrequency = 2GHz
+#*.radioMedium.pathLossType = "TwoRayGroundReflection"
+
+# --- Radio
+*.node*[*].wlan[*].radio.transmitter.bitrate = 2Mbps
+*.node*[*].wlan[*].radio.transmitter.preambleDuration = 0s
+*.node*[*].wlan[*].radio.transmitter.headerBitLength = 100b
+*.node*[*].wlan[*].radio.transmitter.communicationRange = 200m
+*.node*[*].wlan[*].radio.transmitter.detectionRange = 0m
+# --- Radio:Realism
+#*.node*[*].wlan[0].radio.carrierFrequency = 2GHz
+#*.node*[*].wlan[0].radio.bandwidth = 2MHz
+#*.node*[*].wlan[0].radio.transmitter.power = 1.4mW
+#*.node*[*].wlan[0].radio.transmitter.preambleDuration = 10us
+#*.node*[*].wlan[0].radio.transmitter.headerBitLength = 0b
+#*.node*[*].wlan[0].radio.receiver.sensitivity = -85dBm
+#*.node*[*].wlan[0].radio.receiver.energyDetection = -85dBm
+#*.node*[*].wlan[0].radio.receiver.snirThreshold = 4dB
 
 # --- Radio:Interference
-#*.host*.wlan[0].radio.receiver.ignoreInterference = true
-*.host*.wlan[0].radio.receiver.ignoreInterference = false
-*.host*.wlan[0].radio.transmitter.interferenceRange = 500m
-
-# --- Radio:Realism
-*.host*.wlan[0].radio.carrierFrequency = 2GHz
-*.host*.wlan[0].radio.bandwidth = 2MHz
-*.host*.wlan[0].radio.transmitter.power = 1.4mW
-*.host*.wlan[0].radio.transmitter.preambleDuration = 10us
-*.host*.wlan[0].radio.transmitter.headerBitLength = 0b
-*.host*.wlan[0].radio.receiver.sensitivity = -85dBm
-*.host*.wlan[0].radio.receiver.energyDetection = -85dBm
-*.host*.wlan[0].radio.receiver.snirThreshold = 4dB
+*.node*[*].wlan[0].radio.receiver.ignoreInterference = true
+*.node*[*].wlan[0].radio.transmitter.interferenceRange = 0m
 
 # --- Radio:Antenna
-*.host*.wlan[0].radio.antennaType = "ConstantGainAntenna"
-*.host*.wlan[0].radio.antenna.gain = 3dB
+#*.node*[*].wlan[0].radio.antennaType = "ConstantGainAntenna"
+#*.node*[*].wlan[0].radio.antenna.gain = 3dB
 
 # --- Radio:Energy
-*.host*.wlan[0].radio.energyConsumerType = "StateBasedEnergyConsumer"
-*.host*.wlan[0].radio.energyConsumer.offPowerConsumption = 0mW
-*.host*.wlan[0].radio.energyConsumer.sleepPowerConsumption = 1mW
-*.host*.wlan[0].radio.energyConsumer.switchingPowerConsumption = 1mW
-*.host*.wlan[0].radio.energyConsumer.receiverIdlePowerConsumption = 2mW
-*.host*.wlan[0].radio.energyConsumer.receiverBusyPowerConsumption = 5mW
-*.host*.wlan[0].radio.energyConsumer.receiverReceivingPowerConsumption = 10mW
-*.host*.wlan[0].radio.energyConsumer transmitterIdlePowerConsumption = 2mW
-*.host*.wlan[0].radio.energyConsumer.transmitterTransmittingPowerConsumption = 100mW
-
-# --- General
-*.host*.**.bitrate = 1Mbps
-*.host*.energyStorageType = "IdealEnergyStorage"
+#*.node*[*].energyStorageType = "IdealEnergyStorage"
+#*.node*[*].wlan[0].radio.energyConsumerType = "StateBasedEnergyConsumer"
+#*.node*[*].wlan[0].radio.energyConsumer.offPowerConsumption = 0mW
+#*.node*[*].wlan[0].radio.energyConsumer.sleepPowerConsumption = 1mW
+#*.node*[*].wlan[0].radio.energyConsumer.switchingPowerConsumption = 1mW
+#*.node*[*].wlan[0].radio.energyConsumer.receiverIdlePowerConsumption = 2mW
+#*.node*[*].wlan[0].radio.energyConsumer.receiverBusyPowerConsumption = 5mW
+#*.node*[*].wlan[0].radio.energyConsumer.receiverReceivingPowerConsumption = 10mW
+#*.node*[*].wlan[0].radio.energyConsumer transmitterIdlePowerConsumption = 2mW
+#*.node*[*].wlan[0].radio.energyConsumer.transmitterTransmittingPowerConsumption = 100mW
 
 #
 # Routing
 #
-*.host*.forwarding = true
+#*.host*.forwarding = true # Not w/ LMAC
 *.configurator.config = xml("<config><interface hosts='**' address='10.0.0.x' netmask='255.255.255.0'/><autoroute metric='errorRate'/></config>")
-*.configurator.addStaticRoutes = false
+*.nodeMaster[*].routingTable.netmaskRoutes = ""
 *.configurator.optimizeRoutes = false
-*.host*.routingTable.netmaskRoutes = ""
+*.configurator.addStaticRoutes = false
 
 #
 # Mobility
 #
-*.host*.mobility.initialZ = 1.7m
-*.hostS*.mobilityType = "LinearMobility"
-*.hostS*.mobility.speed = 12mps
-*.hostS*.mobility.angle = 270deg
+*.nodeMaster[0].mobilityType = "StationaryMobility"
+*.nodeMaster[0].mobility.initFromDisplayString = false
+*.nodeMaster[0].mobility.initialX = 200m
+*.nodeMaster[0].mobility.initialY = 25m
+
+*.nodeMaster[1].mobilityType = "LinearMobility"
+*.nodeMaster[1].mobility.initFromDisplayString = false
+*.nodeMaster[1].mobility.initialX = 300m
+*.nodeMaster[1].mobility.initialY = 25m
+*.nodeMaster[1].mobility.speed = 10mps
+*.nodeMaster[1].mobility.angle = 90deg
+#*.host*.mobility.initialZ = 1.7m
 
 #
 # Visualization
 #
-*.visualizer.sceneVisualizer.descriptionFigure = "title"
+#*.visualizer.sceneVisualizer.descriptionFigure = "title"
 #*.visualizer.mediumVisualizer.displaySignals = true
-*.visualizer.mediumVisualizer.displaySignals = false
-*.visualizer.mediumVisualizer.signalPropagationUpdateInterval = 100ns
-*.visualizer.physicalLinkVisualizer.packetNameFilter = "UDPData*"
-#*.visualizer.dataLinkVisualizer.packetNameFilter = "UDPData*"
-#*.visualizer.dataLinkVisualizer.packetNameFilter = ""
-*.visualizer.dataLinkVisualizer.packetNameFilter = "AODV*"
+#*.visualizer.mediumVisualizer.displaySignals = false
+#*.visualizer.mediumVisualizer.signalPropagationUpdateInterval = 100ns
+# --- Visualization:Protocol Layers
+#*.visualizer.physicalLinkVisualizer.packetNameFilter = "UDPData*"
+*.visualizer.dataLinkVisualizer.packetNameFilter = "UDPData*"
+#*.visualizer.dataLinkVisualizer.packetNameFilter = "AODV*"
 *.visualizer.networkRouteVisualizer.packetNameFilter = "UDPData*"
-*.visualizer.mobilityVisualizer.displayMovementTrail = true
+#*.visualizer.mobilityVisualizer.displayMovementTrail = true
 
 #
 # Obstacles
 #
-*.physicalEnvironment.config = xmldoc("walls.xml")
-*.radioMedium.obstacleLossType = "IdealObstacleLoss"
+#*.physicalEnvironment.config = xmldoc("walls.xml")
+#*.radioMedium.obstacleLossType = "IdealObstacleLoss"
 
 #
 # Environment
 #
-*.physicalEnvironment.groundType = "FlatGround"
-*.physicalEnvironment.ground.elevation = 0m
+#*.physicalEnvironment.groundType = "FlatGround"
+#*.physicalEnvironment.ground.elevation = 0m
