Added programmatic introduction of nodes within network. Added small shell script to perform simulations.

--- a/Simulation/OMNeT++/CubeSatNetworks/omnetpp.ini
+++ b/Simulation/OMNeT++/CubeSatNetworks/omnetpp.ini
@@ -1,13 +1,14 @@
 [Config BaseConfig]
 network = Base
 description = "Lightweight mac with ideal radio"
-sim-time-limit = 60s
+sim-time-limit = 500s
 
 num-rngs = 3
 **.mobility.rng-0 = 1
 **.wlan[*].mac.rng-0 = 2
 
-*.numMasters = 2
+#*.numMasters = 5
+*.numMasters = ${N=5}
 
 #
 # Network Parameters
@@ -21,23 +22,24 @@ num-rngs = 3
 #
 *.nodeMaster[*].numUdpApps = 1
 # --- Master 0
-*.nodeMaster[0].udpApp[0].typename = "UDPBasicApp"
-*.nodeMaster[0].udpApp[0].destAddresses = "nodeMaster[1]"
-*.nodeMaster[0].udpApp[0].destPort = 5000
-*.nodeMaster[0].udpApp[0].messageLength = 1000B
-*.nodeMaster[0].udpApp[0].sendInterval = exponential(12ms)
-*.nodeMaster[0].udpApp[0].packetName = "UDPData"
-*.nodeMaster[0].udpApp[0].startTime = 5s
-# --- Master 1
-*.nodeMaster[1].udpApp[0].typename = "UDPSink"
-*.nodeMaster[1].udpApp[0].localPort = 5000
+*.nodeMaster[0].udpApp[0].typename = "UDPSink"
+*.nodeMaster[0].udpApp[0].localPort = 5000
+# --- Master 1+
+*.nodeMaster[1..].udpApp[0].typename = "UDPBasicApp"
+*.nodeMaster[1..].udpApp[0].destAddresses = "nodeMaster[0]"
+*.nodeMaster[1..].udpApp[0].destPort = 5000
+*.nodeMaster[1..].udpApp[0].messageLength = 1000B
+*.nodeMaster[1..].udpApp[0].sendInterval = exponential(12ms)
+*.nodeMaster[1..].udpApp[0].packetName = "UDPData"
+*.nodeMaster[1..].udpApp[0].startTime = 5s
 
 #
 # NIC
 #
 *.node*[*].wlan[*].typename = "WirelessNic"
 *.node*[*].wlan[*].macType = "LMacLayer"
-*.node*[*].wlan[*].mac.numSlots = 2
+#*.node*[*].wlan[*].mac.numSlots = 10
+*.node*[*].wlan[*].mac.numSlots = 2*${N}
 #*.master[*].wlan[0].macType = "CsmaCaMac"
 
 # --- Radio
@@ -57,6 +59,7 @@ num-rngs = 3
 *.node*[*].wlan[*].radio.transmitter.headerBitLength = 100b
 *.node*[*].wlan[*].radio.transmitter.communicationRange = 200m
 *.node*[*].wlan[*].radio.transmitter.detectionRange = 0m
+
 # --- Radio:Realism
 #*.node*[*].wlan[0].radio.carrierFrequency = 2GHz
 #*.node*[*].wlan[0].radio.bandwidth = 2MHz
@@ -101,15 +104,28 @@ num-rngs = 3
 #
 *.nodeMaster[0].mobilityType = "StationaryMobility"
 *.nodeMaster[0].mobility.initFromDisplayString = false
-*.nodeMaster[0].mobility.initialX = 200m
-*.nodeMaster[0].mobility.initialY = 25m
+*.nodeMaster[0].mobility.initialX = 250m
+*.nodeMaster[0].mobility.initialY = 100m
+*.nodeMaster[0].mobility.initialZ = 0m
+*.nodeMaster[1..].mobilityType = "CircleMobility"
+*.nodeMaster[1..].**.cx = 250m
+*.nodeMaster[1..].**.cy = 100m
+*.nodeMaster[1..].**.cz = 0m
+*.nodeMaster[1..].**.r = 50m
+#*.nodeMaster[1..].**.startAngle = parentIndex() * (360deg/(5-1))
+*.nodeMaster[1..].**.startAngle = parentIndex() * (360deg/(${N}-1))
 
-*.nodeMaster[1].mobilityType = "LinearMobility"
-*.nodeMaster[1].mobility.initFromDisplayString = false
-*.nodeMaster[1].mobility.initialX = 300m
-*.nodeMaster[1].mobility.initialY = 25m
-*.nodeMaster[1].mobility.speed = 10mps
-*.nodeMaster[1].mobility.angle = 90deg
+#*.nodeMaster[*].mobilityType = "StationaryMobility"
+#*.nodeMaster[*].mobility.initFromDisplayString = false
+#*.nodeMaster[*].mobility.initialX = 200m
+#*.nodeMaster[*].mobility.initialY = 25m
+
+#*.nodeMaster[1].mobilityType = "LinearMobility"
+#*.nodeMaster[1].mobility.initFromDisplayString = false
+#*.nodeMaster[1].mobility.initialX = 300m
+#*.nodeMaster[1].mobility.initialY = 25m
+#*.nodeMaster[1].mobility.speed = 10mps
+#*.nodeMaster[1].mobility.angle = 90deg
 #*.host*.mobility.initialZ = 1.7m
 
 #
@@ -120,7 +136,7 @@ num-rngs = 3
 #*.visualizer.mediumVisualizer.displaySignals = false
 #*.visualizer.mediumVisualizer.signalPropagationUpdateInterval = 100ns
 # --- Visualization:Protocol Layers
-#*.visualizer.physicalLinkVisualizer.packetNameFilter = "UDPData*"
+*.visualizer.physicalLinkVisualizer.packetNameFilter = "UDPData*"
 *.visualizer.dataLinkVisualizer.packetNameFilter = "UDPData*"
 #*.visualizer.dataLinkVisualizer.packetNameFilter = "AODV*"
 *.visualizer.networkRouteVisualizer.packetNameFilter = "UDPData*"
