--- a/Simulation/OMNeT++/CubeSatNetworks/.cproject
+++ b/Simulation/OMNeT++/CubeSatNetworks/.cproject
@@ -101,4 +101,5 @@
 		</scannerConfigBuildInfo>
 	</storageModule>
 	<storageModule moduleId="org.eclipse.cdt.core.LanguageSettingsProviders"/>
+	<storageModule moduleId="refreshScope"/>
 </cproject>
