Included further parameters. Added notes on current module hierarchy.

--- a/Simulation/OMNeT++/CubeSatNetworks/omnetpp.ini
+++ b/Simulation/OMNeT++/CubeSatNetworks/omnetpp.ini
@@ -1,103 +1,115 @@
 [Config BaseConfig]
 network = Base
-description = "Lightweight mac with ideal radio"
+description = "Simulatin' spacecraft"
 sim-time-limit = 500s
 
+#
+# Random Numbers
+#
 num-rngs = 3
 **.mobility.rng-0 = 1
 **.wlan[*].mac.rng-0 = 2
-
-#*.numMasters = 5
-*.numMasters = ${N=5}
 
 #
 # Network Parameters
 #
 *.radioMediumType = "IdealRadioMedium"
-#*.radioMediumType = "APSKScalarRadioMedium"
-#*.host*.networkLayer.arpType = "GlobalARP" # N/A
+*.numMasters = ${N=2}
 
 #
-# Applications
+# Host
 #
+# https://omnetpp.org/doc/inet/api-current/neddoc/inet.node.inet.NodeBase.html
+# https://omnetpp.org/doc/inet/api-current/neddoc/inet.node.aodv.AODVRouter.html
+#
+# --- NodeBase
+#*.nodeMaster[*].hasStatus = false
+#*.nodeMaster[*].forwarding = true
+#*.nodeMaster[*].energyStorageType = ""
+#*.nodeMaster[*].energyGeneratorType = ""
+# --- StandardHost
 *.nodeMaster[*].numUdpApps = 1
+# --- AODVRouter
+# See link: routingtable, pcap, aodv(many parameters)
+
+#
+# Application
+#
+# https://omnetpp.org/doc/inet/api-current/neddoc/index.html?p=inet.applications.udpapp.UDPSink.html
+#
 # --- Master 0
 *.nodeMaster[0].udpApp[0].typename = "UDPSink"
+#*.nodeMaster[0].udpApp[0].startTime = # Default 0s
+#*.nodeMaster[0].udpApp[0].stopTime = # Default -1 (forever)
 *.nodeMaster[0].udpApp[0].localPort = 5000
-# --- Master 1+
+# ... More params available
+# Signals: rcvdPk
+
+# --- UDPBasicApp
+#
+# https://omnetpp.org/doc/inet/api-current/neddoc/index.html?p=inet.applications.udpapp.UDPBasicApp.html
+#
 *.nodeMaster[1..].udpApp[0].typename = "UDPBasicApp"
+#*.nodeMaster[1..].udpApp[0].localPort = # Default -1
 *.nodeMaster[1..].udpApp[0].destAddresses = "nodeMaster[0]"
-*.nodeMaster[1..].udpApp[0].destPort = 5000
-*.nodeMaster[1..].udpApp[0].messageLength = 1000B
-*.nodeMaster[1..].udpApp[0].sendInterval = exponential(12ms)
+#*.nodeMaster[1..].udpApp[0].localAddress = # ""
 *.nodeMaster[1..].udpApp[0].packetName = "UDPData"
+*.nodeMaster[1..].udpApp[0].destPort = 5000
+*.nodeMaster[1..].udpApp[0].messageLength = exponential(128B)
 *.nodeMaster[1..].udpApp[0].startTime = 5s
+#*.nodeMaster[1..].udpApp[0].stopTime = # Default -1 (forever)
+*.nodeMaster[1..].udpApp[0].sendInterval = exponential(10s)
+#*.nodeMaster[1..].udpApp[0].timeToLive = # Default -1 (forever)
+# ... More params available
+# Signals: sentPk, rcvdPk (multi/broadcast)
+
+#
+# Routing
+#
+*.nodeMaster[*].routingTable.netmaskRoutes = ""
+*.configurator.config = xml("<config><interface hosts='**' address='10.0.0.x' netmask='255.255.255.0'/><autoroute metric='errorRate'/></config>")
+*.configurator.optimizeRoutes = false
+*.configurator.addStaticRoutes = false
 
 #
 # NIC
 #
 *.node*[*].wlan[*].typename = "WirelessNic"
+
+# --- MAC
+#
+# https://omnetpp.org/doc/inet/api-current/neddoc/inet.linklayer.lmac.LMacLayer.html
+#
 *.node*[*].wlan[*].macType = "LMacLayer"
-#*.node*[*].wlan[*].mac.numSlots = 10
+*.node*[*].wlan[*].mac.address = "auto"
+*.node*[*].wlan[*].mac.slotDuration = 100ms
+*.node*[*].wlan[*].mac.headerLength = 10B
+*.node*[*].wlan[*].mac.mtu = 0B # = 0B -> no fragmentation, passed up by I/F
+#*.node*[*].wlan[*].mac.queueLength = 10*${N}
+#*.node*[*].wlan[*].mac.bitrate = 1Mbps # How does this affect the transmitter bitrate?
+*.node*[*].wlan[*].mac.reservedMobileSlots = 2 # ?
 *.node*[*].wlan[*].mac.numSlots = 2*${N}
-#*.master[*].wlan[0].macType = "CsmaCaMac"
+#*.node*[*].wlan[*].mac.radioModule = "^.radio" # Path to radio module
+# Signals: packetReceivedFromUpper ... packetSentToUpper
 
 # --- Radio
+#
+# https://omnetpp.org/doc/inet/api-current/neddoc/inet.physicallayer.common.packetlevel.Radio.html
+# 
 *.node*[*].wlan[*].radioType = "IdealRadio"
-#*.node*[*].wlan[*].radioType = "APSKScalarRadio"
-#**.wlan[0].radio.displayInterferenceRange = true
 #**.wlan[0].radio.displayCommunicationRange = true
 
-# --- Radio:Medium (APSKScalarRadioMedium)
-#*.radioMedium.backgroundNoise.power = -90dBm
-#*.radioMedium.mediumLimitCache.carrierFrequency = 2GHz
-#*.radioMedium.pathLossType = "TwoRayGroundReflection"
-
-# --- Radio
+# --- Radio: Transmitter / Receiver
 *.node*[*].wlan[*].radio.transmitter.bitrate = 2Mbps
 *.node*[*].wlan[*].radio.transmitter.preambleDuration = 0s
 *.node*[*].wlan[*].radio.transmitter.headerBitLength = 100b
 *.node*[*].wlan[*].radio.transmitter.communicationRange = 200m
 *.node*[*].wlan[*].radio.transmitter.detectionRange = 0m
 
-# --- Radio:Realism
-#*.node*[*].wlan[0].radio.carrierFrequency = 2GHz
-#*.node*[*].wlan[0].radio.bandwidth = 2MHz
-#*.node*[*].wlan[0].radio.transmitter.power = 1.4mW
-#*.node*[*].wlan[0].radio.transmitter.preambleDuration = 10us
-#*.node*[*].wlan[0].radio.transmitter.headerBitLength = 0b
-#*.node*[*].wlan[0].radio.receiver.sensitivity = -85dBm
-#*.node*[*].wlan[0].radio.receiver.energyDetection = -85dBm
-#*.node*[*].wlan[0].radio.receiver.snirThreshold = 4dB
-
 # --- Radio:Interference
+#*.node*[*].wlan[0].radio.displayInterferenceRange = true
 *.node*[*].wlan[0].radio.receiver.ignoreInterference = true
 *.node*[*].wlan[0].radio.transmitter.interferenceRange = 0m
-
-# --- Radio:Antenna
-#*.node*[*].wlan[0].radio.antennaType = "ConstantGainAntenna"
-#*.node*[*].wlan[0].radio.antenna.gain = 3dB
-
-# --- Radio:Energy
-#*.node*[*].energyStorageType = "IdealEnergyStorage"
-#*.node*[*].wlan[0].radio.energyConsumerType = "StateBasedEnergyConsumer"
-#*.node*[*].wlan[0].radio.energyConsumer.offPowerConsumption = 0mW
-#*.node*[*].wlan[0].radio.energyConsumer.sleepPowerConsumption = 1mW
-#*.node*[*].wlan[0].radio.energyConsumer.switchingPowerConsumption = 1mW
-#*.node*[*].wlan[0].radio.energyConsumer.receiverIdlePowerConsumption = 2mW
-#*.node*[*].wlan[0].radio.energyConsumer.receiverBusyPowerConsumption = 5mW
-#*.node*[*].wlan[0].radio.energyConsumer.receiverReceivingPowerConsumption = 10mW
-#*.node*[*].wlan[0].radio.energyConsumer transmitterIdlePowerConsumption = 2mW
-#*.node*[*].wlan[0].radio.energyConsumer.transmitterTransmittingPowerConsumption = 100mW
-
-#
-# Routing
-#
-#*.host*.forwarding = true # Not w/ LMAC
-*.configurator.config = xml("<config><interface hosts='**' address='10.0.0.x' netmask='255.255.255.0'/><autoroute metric='errorRate'/></config>")
-*.nodeMaster[*].routingTable.netmaskRoutes = ""
-*.configurator.optimizeRoutes = false
-*.configurator.addStaticRoutes = false
 
 #
 # Mobility
@@ -107,49 +119,71 @@ num-rngs = 3
 *.nodeMaster[0].mobility.initialX = 250m
 *.nodeMaster[0].mobility.initialY = 100m
 *.nodeMaster[0].mobility.initialZ = 0m
+
 *.nodeMaster[1..].mobilityType = "CircleMobility"
 *.nodeMaster[1..].**.cx = 250m
 *.nodeMaster[1..].**.cy = 100m
 *.nodeMaster[1..].**.cz = 0m
 *.nodeMaster[1..].**.r = 50m
-#*.nodeMaster[1..].**.startAngle = parentIndex() * (360deg/(5-1))
 *.nodeMaster[1..].**.startAngle = parentIndex() * (360deg/(${N}-1))
-
-#*.nodeMaster[*].mobilityType = "StationaryMobility"
-#*.nodeMaster[*].mobility.initFromDisplayString = false
-#*.nodeMaster[*].mobility.initialX = 200m
-#*.nodeMaster[*].mobility.initialY = 25m
-
-#*.nodeMaster[1].mobilityType = "LinearMobility"
-#*.nodeMaster[1].mobility.initFromDisplayString = false
-#*.nodeMaster[1].mobility.initialX = 300m
-#*.nodeMaster[1].mobility.initialY = 25m
-#*.nodeMaster[1].mobility.speed = 10mps
-#*.nodeMaster[1].mobility.angle = 90deg
-#*.host*.mobility.initialZ = 1.7m
 
 #
 # Visualization
 #
-#*.visualizer.sceneVisualizer.descriptionFigure = "title"
-#*.visualizer.mediumVisualizer.displaySignals = true
-#*.visualizer.mediumVisualizer.displaySignals = false
-#*.visualizer.mediumVisualizer.signalPropagationUpdateInterval = 100ns
-# --- Visualization:Protocol Layers
 *.visualizer.physicalLinkVisualizer.packetNameFilter = "UDPData*"
 *.visualizer.dataLinkVisualizer.packetNameFilter = "UDPData*"
 #*.visualizer.dataLinkVisualizer.packetNameFilter = "AODV*"
 *.visualizer.networkRouteVisualizer.packetNameFilter = "UDPData*"
 #*.visualizer.mobilityVisualizer.displayMovementTrail = true
 
-#
-# Obstacles
-#
+
+[Config APSKRadio]
+extends = BaseConfig
+
+*.radioMediumType = "APSKScalarRadioMedium"
+*.radioMedium.backgroundNoise.power = -90dBm
+*.radioMedium.mediumLimitCache.carrierFrequency = 2GHz
+*.radioMedium.pathLossType = "TwoRayGroundReflection"
+
+*.node*[*].wlan[*].radioType = "APSKScalarRadio"
+*.node*[*].wlan[0].radio.carrierFrequency = 2GHz
+*.node*[*].wlan[0].radio.bandwidth = 2MHz
+
+*.node*[*].wlan[0].radio.transmitter.power = 1.4mW
+*.node*[*].wlan[0].radio.transmitter.preambleDuration = 10us
+*.node*[*].wlan[0].radio.transmitter.headerBitLength = 0b
+
+*.node*[*].wlan[0].radio.receiver.sensitivity = -85dBm
+*.node*[*].wlan[0].radio.receiver.energyDetection = -85dBm
+*.node*[*].wlan[0].radio.receiver.snirThreshold = 4dB
+
+*.node*[*].wlan[0].radio.antennaType = "ConstantGainAntenna"
+*.node*[*].wlan[0].radio.antenna.gain = 3dB
+
+[Config EnergyModelling]
+extends = APSKRadio
+
+*.node*[*].energyStorageType = "IdealEnergyStorage"
+*.node*[*].wlan[0].radio.energyConsumerType = "StateBasedEnergyConsumer"
+
+*.node*[*].wlan[0].radio.energyConsumer.offPowerConsumption = 0mW
+*.node*[*].wlan[0].radio.energyConsumer.sleepPowerConsumption = 1mW
+*.node*[*].wlan[0].radio.energyConsumer.switchingPowerConsumption = 1mW
+
+*.node*[*].wlan[0].radio.energyConsumer.receiverIdlePowerConsumption = 2mW
+*.node*[*].wlan[0].radio.energyConsumer.receiverBusyPowerConsumption = 5mW
+*.node*[*].wlan[0].radio.energyConsumer.receiverReceivingPowerConsumption = 10mW
+
+*.node*[*].wlan[0].radio.energyConsumer transmitterIdlePowerConsumption = 2mW
+*.node*[*].wlan[0].radio.energyConsumer.transmitterTransmittingPowerConsumption = 100mW
+
+[Config Environment]
+extends = EnergyModelling
+
+#*.physicalEnvironment.groundType = "FlatGround"
+#*.physicalEnvironment.ground.elevation = 0m
+
 #*.physicalEnvironment.config = xmldoc("walls.xml")
 #*.radioMedium.obstacleLossType = "IdealObstacleLoss"
 
-#
-# Environment
-#
-#*.physicalEnvironment.groundType = "FlatGround"
-#*.physicalEnvironment.ground.elevation = 0m
+
