--- a/Simulation/OMNeT++/CubeSatNetworks/omnetpp.ini
+++ b/Simulation/OMNeT++/CubeSatNetworks/omnetpp.ini
@@ -1,6 +1,5 @@
 [Config BaseConfig]
 network = Base
-description = "Simulatin' spacecraft"
 sim-time-limit = 500s
 
 #
@@ -14,7 +13,9 @@ num-rngs = 3
 # Network Parameters
 #
 *.radioMediumType = "IdealRadioMedium"
-*.numMasters = ${N=2}
+*.numMasters = ${NM=6}
+*.numSlaves = ${NS=(${NM})}
+*.slavesPerMaster = ${SPM=(${NS}/${NM})}
 
 #
 # Host
@@ -29,7 +30,9 @@ num-rngs = 3
 #*.nodeMaster[*].energyGeneratorType = ""
 # --- StandardHost
 *.nodeMaster[*].numUdpApps = 1
+*.nodeSlave[*].numUdpApps = 1
 # --- AODVRouter
+# TODO Explore AODV example
 # See link: routingtable, pcap, aodv(many parameters)
 
 #
@@ -38,37 +41,34 @@ num-rngs = 3
 # https://omnetpp.org/doc/inet/api-current/neddoc/index.html?p=inet.applications.udpapp.UDPSink.html
 #
 # --- Master 0
-*.nodeMaster[0].udpApp[0].typename = "UDPSink"
+*.nodeMaster[*].udpApp[0].typename = "UDPSink"
+*.nodeMaster[*].udpApp[0].localPort = 5000
 #*.nodeMaster[0].udpApp[0].startTime = # Default 0s
 #*.nodeMaster[0].udpApp[0].stopTime = # Default -1 (forever)
-*.nodeMaster[0].udpApp[0].localPort = 5000
-# ... More params available
-# Signals: rcvdPk
 
-# --- UDPBasicApp
-#
+
 # https://omnetpp.org/doc/inet/api-current/neddoc/index.html?p=inet.applications.udpapp.UDPBasicApp.html
 #
-*.nodeMaster[1..].udpApp[0].typename = "UDPBasicApp"
-#*.nodeMaster[1..].udpApp[0].localPort = # Default -1
-*.nodeMaster[1..].udpApp[0].destAddresses = "nodeMaster[0]"
-#*.nodeMaster[1..].udpApp[0].localAddress = # ""
-*.nodeMaster[1..].udpApp[0].packetName = "UDPData"
-*.nodeMaster[1..].udpApp[0].destPort = 5000
-*.nodeMaster[1..].udpApp[0].messageLength = exponential(128B)
-*.nodeMaster[1..].udpApp[0].startTime = 5s
-#*.nodeMaster[1..].udpApp[0].stopTime = # Default -1 (forever)
-*.nodeMaster[1..].udpApp[0].sendInterval = exponential(10s)
-#*.nodeMaster[1..].udpApp[0].timeToLive = # Default -1 (forever)
+*.nodeSlave[*].udpApp[0].typename = "UDPBasicApp"
+*.nodeSlave[*].udpApp[0].destAddresses = "nodeMaster[0]"
+*.nodeSlave[*].udpApp[0].packetName = "UDPData"
+*.nodeSlave[*].udpApp[0].destPort = 5000
+*.nodeSlave[*].udpApp[0].messageLength = exponential(128B)
+*.nodeSlave[*].udpApp[0].startTime = 5s
+*.nodeSlave[*].udpApp[0].sendInterval = exponential(100ms)
+#*.nodeSlave[*].udpApp[0].stopTime = # Default -1 (forever)
+#*.nodeSlave[*].udpApp[0].localPort = # Default -1
+#*.nodeSlave[*].udpApp[0].localAddress = # ""
+#*.nodeSlave[*].udpApp[0].timeToLive = # Default -1 (forever)
 # ... More params available
-# Signals: sentPk, rcvdPk (multi/broadcast)
 
 #
 # Routing
 #
-*.nodeMaster[*].routingTable.netmaskRoutes = ""
-*.configurator.config = xml("<config><interface hosts='**' address='10.0.0.x' netmask='255.255.255.0'/><autoroute metric='errorRate'/></config>")
-*.configurator.optimizeRoutes = false
+#*.nodeMaster[*].routingTable.netmaskRoutes = ""
+#*.configurator.config = xml("<config><interface hosts='**' address='10.0.0.x' netmask='255.255.255.0'/><autoroute metric='errorRate'/></config>")
+#*.configurator.optimizeRoutes = false
+**.forwarding = true
 *.configurator.addStaticRoutes = false
 
 #
@@ -85,47 +85,56 @@ num-rngs = 3
 *.node*[*].wlan[*].mac.slotDuration = 100ms
 *.node*[*].wlan[*].mac.headerLength = 10B
 *.node*[*].wlan[*].mac.mtu = 0B # = 0B -> no fragmentation, passed up by I/F
-#*.node*[*].wlan[*].mac.queueLength = 10*${N}
-#*.node*[*].wlan[*].mac.bitrate = 1Mbps # How does this affect the transmitter bitrate?
-*.node*[*].wlan[*].mac.reservedMobileSlots = 2 # ?
-*.node*[*].wlan[*].mac.numSlots = 2*${N}
+*.node*[*].wlan[*].mac.numSlots = 2*(${NM}+${NS})
+*.node*[*].wlan[*].mac.queueLength = 10*${NS}
+#*.node*[*].wlan[*].mac.bitrate = 2Mbps # How does this affect the transmitter bitrate?
+#*.node*[*].wlan[*].mac.reservedMobileSlots = 2 # ?
 #*.node*[*].wlan[*].mac.radioModule = "^.radio" # Path to radio module
-# Signals: packetReceivedFromUpper ... packetSentToUpper
 
 # --- Radio
 #
 # https://omnetpp.org/doc/inet/api-current/neddoc/inet.physicallayer.common.packetlevel.Radio.html
 # 
 *.node*[*].wlan[*].radioType = "IdealRadio"
-#**.wlan[0].radio.displayCommunicationRange = true
+*.node*[*].wlan[0].radio.displayCommunicationRange = true
+
+# --- Radio: Medium (APSK)
+
 
 # --- Radio: Transmitter / Receiver
 *.node*[*].wlan[*].radio.transmitter.bitrate = 2Mbps
 *.node*[*].wlan[*].radio.transmitter.preambleDuration = 0s
 *.node*[*].wlan[*].radio.transmitter.headerBitLength = 100b
-*.node*[*].wlan[*].radio.transmitter.communicationRange = 200m
+*.nodeMaster[*].wlan[*].radio.transmitter.communicationRange = 350m
+*.nodeSlave[*].wlan[*].radio.transmitter.communicationRange = 75m
 *.node*[*].wlan[*].radio.transmitter.detectionRange = 0m
+*.node*[*].wlan[*].radio.transmitter.interferenceRange = 0m
 
-# --- Radio:Interference
-#*.node*[*].wlan[0].radio.displayInterferenceRange = true
 *.node*[*].wlan[0].radio.receiver.ignoreInterference = true
-*.node*[*].wlan[0].radio.transmitter.interferenceRange = 0m
+
+# --- General 
+#**.bitrate = 2Mbps
 
 #
 # Mobility
 #
-*.nodeMaster[0].mobilityType = "StationaryMobility"
-*.nodeMaster[0].mobility.initFromDisplayString = false
-*.nodeMaster[0].mobility.initialX = 250m
-*.nodeMaster[0].mobility.initialY = 100m
-*.nodeMaster[0].mobility.initialZ = 0m
+*.nodeMaster[*].mobilityType = "CircleMobility"
+*.nodeMaster[*].**.cx = 500m
+*.nodeMaster[*].**.cy = 500m
+*.nodeMaster[*].**.cz = 0m
+*.nodeMaster[*].**.r = 250m
+*.nodeMaster[*].**.startAngle = parentIndex() * (360deg/${NM})
 
-*.nodeMaster[1..].mobilityType = "CircleMobility"
-*.nodeMaster[1..].**.cx = 250m
-*.nodeMaster[1..].**.cy = 100m
-*.nodeMaster[1..].**.cz = 0m
-*.nodeMaster[1..].**.r = 50m
-*.nodeMaster[1..].**.startAngle = parentIndex() * (360deg/(${N}-1))
+*.nodeSlave[*].mobilityType = "CircleMobility"
+*.nodeSlave[*].**.cx = 500m
+*.nodeSlave[*].**.cy = 500m
+*.nodeSlave[*].**.cz = 0m
+*.nodeSlave[*].**.r = 275m
+*.nodeSlave[..5].**.startAngle = (parentIndex() * (360deg/${NM})) + 10deg
+#*.nodeSlave[6..].**.startAngle = (parentIndex() * (360deg/${NM})) - 10deg # The rest?
+# Not working
+#*.nodeSlave[..((${NS}/${SPM})-1)].**.startAngle = ((parentIndex()/${SPM}) * (360deg/${NM})) + 5deg
+#*.nodeSlave[(${NS}/${SPM})..].**.startAngle = ((parentIndex()/${SPM}) * (360deg/${NM})) - 5deg # The rest?
 
 #
 # Visualization
@@ -141,24 +150,22 @@ num-rngs = 3
 extends = BaseConfig
 
 *.radioMediumType = "APSKScalarRadioMedium"
-*.radioMedium.backgroundNoise.power = -90dBm
-*.radioMedium.mediumLimitCache.carrierFrequency = 2GHz
-*.radioMedium.pathLossType = "TwoRayGroundReflection"
+*.radioMedium.backgroundNoise.power = -110dBm 
+*.radioMedium.mediumLimitCache.carrierFrequency = 2GHz 
 
-*.node*[*].wlan[*].radioType = "APSKScalarRadio"
-*.node*[*].wlan[0].radio.carrierFrequency = 2GHz
-*.node*[*].wlan[0].radio.bandwidth = 2MHz
+*.node*[*].wlan[*].radioType = "APSKScalarRadio" 
 
-*.node*[*].wlan[0].radio.transmitter.power = 1.4mW
-*.node*[*].wlan[0].radio.transmitter.preambleDuration = 10us
-*.node*[*].wlan[0].radio.transmitter.headerBitLength = 0b
+*.node*[*].wlan[0].radio.carrierFrequency = 2.412GHz 
+*.node*[*].wlan[0].radio.bandwidth = 2MHz 
 
-*.node*[*].wlan[0].radio.receiver.sensitivity = -85dBm
-*.node*[*].wlan[0].radio.receiver.energyDetection = -85dBm
-*.node*[*].wlan[0].radio.receiver.snirThreshold = 4dB
+*.node*[*].wlan[*].radio.transmitter.power = 2mW 
+*.node*[*].wlan[*].radio.transmitter.preambleDuration = 0s 
+*.node*[*].wlan[*].radio.transmitter.headerBitLength = 100b 
+*.host[*].wlan[*].radio.transmitter.modulation = "BPSK"
 
-*.node*[*].wlan[0].radio.antennaType = "ConstantGainAntenna"
-*.node*[*].wlan[0].radio.antenna.gain = 3dB
+*.node*[*].wlan[*].radio.receiver.sensitivity = -85dBm 
+*.node*[*].wlan[*].radio.receiver.energyDetection = -85dBm 
+*.node*[*].wlan[*].radio.receiver.snirThreshold = 4dB 
 
 [Config EnergyModelling]
 extends = APSKRadio
@@ -176,14 +183,5 @@ extends = APSKRadio
 
 *.node*[*].wlan[0].radio.energyConsumer transmitterIdlePowerConsumption = 2mW
 *.node*[*].wlan[0].radio.energyConsumer.transmitterTransmittingPowerConsumption = 100mW
-
-[Config Environment]
-extends = EnergyModelling
-
-#*.physicalEnvironment.groundType = "FlatGround"
-#*.physicalEnvironment.ground.elevation = 0m
-
-#*.physicalEnvironment.config = xmldoc("walls.xml")
-#*.radioMedium.obstacleLossType = "IdealObstacleLoss"
 
 
