--- a/Simulation/OMNeT++/inet/tutorials/wireless/omnetpp.ini
+++ b/Simulation/OMNeT++/inet/tutorials/wireless/omnetpp.ini
@@ -4,9 +4,6 @@ description = Two hosts communicating wirelessly
 network = WirelessA
 sim-time-limit = 25s
 
-WirelessA.hostType = "WirelessHost"
-WirelessA.mediumType = "IdealRadioMedium"
-
 *.host*.networkLayer.arpType = "GlobalARP"
 
 *.hostA.numUdpApps = 1
@@ -23,7 +20,7 @@ WirelessA.mediumType = "IdealRadioMedium"
 
 *.host*.wlan[0].typename = "IdealWirelessNic"
 *.host*.wlan[0].mac.useAck = false
-*.host*.wlan[0].mac.fullDuplex = true
+*.host*.wlan[0].mac.fullDuplex = false
 *.host*.wlan[0].radio.transmitter.communicationRange = 500m
 *.host*.wlan[0].radio.receiver.ignoreInterference = true
 
