--- a/Simulation/OMNeT++/CubeSats/omnetpp.ini
+++ b/Simulation/OMNeT++/CubeSats/omnetpp.ini
@@ -1,6 +1,6 @@
 [Config BaseConfig]
 network = Base
-sim-time-limit = 500s
+#sim-time-limit = 500s
 
 #
 # Random Numbers
@@ -13,7 +13,7 @@ num-rngs = 3
 # Network Parameters
 #
 *.radioMediumType = "IdealRadioMedium"
-*.numMasters = ${NM=6}
+*.numMasters = ${NM=2}
 *.numSlaves = ${NS=(${NM})}
 *.slavesPerMaster = ${SPM=(${NS}/${NM})}
 
@@ -49,12 +49,21 @@ num-rngs = 3
 
 # https://omnetpp.org/doc/inet/api-current/neddoc/index.html?p=inet.applications.udpapp.UDPBasicApp.html
 #
+# !!! Master NOT routing slave packets while using UDPBasicApp
+#*.nodeMaster[1..].udpApp[0].typename = "UDPBasicApp"
+#*.nodeMaster[1..].udpApp[0].destAddresses = "nodeMaster[0]"
+#*.nodeMaster[1..].udpApp[0].packetName = "UDPDataMaster"
+#*.nodeMaster[1..].udpApp[0].destPort = 5000
+#*.nodeMaster[1..].udpApp[0].messageLength = exponential(128B)
+#*.nodeMaster[1..].udpApp[0].startTime = 30s
+#*.nodeMaster[1..].udpApp[0].sendInterval = exponential(100ms)
+
 *.nodeSlave[*].udpApp[0].typename = "UDPBasicApp"
 *.nodeSlave[*].udpApp[0].destAddresses = "nodeMaster[0]"
-*.nodeSlave[*].udpApp[0].packetName = "UDPData"
+*.nodeSlave[*].udpApp[0].packetName = "UDPDataSlave"
 *.nodeSlave[*].udpApp[0].destPort = 5000
 *.nodeSlave[*].udpApp[0].messageLength = exponential(128B)
-*.nodeSlave[*].udpApp[0].startTime = 5s
+*.nodeSlave[*].udpApp[0].startTime = 30s
 *.nodeSlave[*].udpApp[0].sendInterval = exponential(100ms)
 #*.nodeSlave[*].udpApp[0].stopTime = # Default -1 (forever)
 #*.nodeSlave[*].udpApp[0].localPort = # Default -1
@@ -65,11 +74,11 @@ num-rngs = 3
 #
 # Routing
 #
-#*.nodeMaster[*].routingTable.netmaskRoutes = ""
-#*.configurator.config = xml("<config><interface hosts='**' address='10.0.0.x' netmask='255.255.255.0'/><autoroute metric='errorRate'/></config>")
-#*.configurator.optimizeRoutes = false
+#**.routingTable.netmaskRoutes = ""
+**.configurator.config = xml("<config><interface hosts='*' address='10.10.x.x' netmask='255.255.0.0'/></config>")
+**.configurator.addStaticRoutes = false
+**.configurator.optimizeRoutes = false
 **.forwarding = true
-*.configurator.addStaticRoutes = false
 
 #
 # NIC
@@ -81,15 +90,18 @@ num-rngs = 3
 # https://omnetpp.org/doc/inet/api-current/neddoc/inet.linklayer.lmac.LMacLayer.html
 #
 *.node*[*].wlan[*].macType = "CubeMacLayer"
-#*.node*[*].wlan[*].macType = "LMacLayer"
 *.node*[*].wlan[*].mac.address = "auto"
 *.node*[*].wlan[*].mac.slotDuration = 100ms
 *.node*[*].wlan[*].mac.headerLength = 10B
 *.node*[*].wlan[*].mac.mtu = 0B # = 0B -> no fragmentation, passed up by I/F
-*.node*[*].wlan[*].mac.numSlots = 2*(${NM}+${NS})
-*.node*[*].wlan[*].mac.queueLength = 10*${NS}
+*.node*[*].wlan[*].mac.numSlots = (${NM})+1 # +1 for the slave uplink slot
+*.node*[*].wlan[*].mac.queueLength = 10*${NM}
+# Added
+*.nodeSlave[*].wlan[*].mac.isSlave = true
+*.node*[*].wlan[*].mac.reservedMobileSlots = 0 # !!! Imporant to hold this at zero until it is removed
+#
+
 #*.node*[*].wlan[*].mac.bitrate = 2Mbps # How does this affect the transmitter bitrate?
-#*.node*[*].wlan[*].mac.reservedMobileSlots = 2 # ?
 #*.node*[*].wlan[*].mac.radioModule = "^.radio" # Path to radio module
 
 # --- Radio
@@ -106,8 +118,8 @@ num-rngs = 3
 *.node*[*].wlan[*].radio.transmitter.bitrate = 2Mbps
 *.node*[*].wlan[*].radio.transmitter.preambleDuration = 0s
 *.node*[*].wlan[*].radio.transmitter.headerBitLength = 100b
-*.nodeMaster[*].wlan[*].radio.transmitter.communicationRange = 350m
-*.nodeSlave[*].wlan[*].radio.transmitter.communicationRange = 75m
+*.nodeMaster[*].wlan[*].radio.transmitter.communicationRange = 150m
+*.nodeSlave[*].wlan[*].radio.transmitter.communicationRange = 50m
 *.node*[*].wlan[*].radio.transmitter.detectionRange = 0m
 *.node*[*].wlan[*].radio.transmitter.interferenceRange = 0m
 
@@ -123,16 +135,16 @@ num-rngs = 3
 *.nodeMaster[*].**.cx = 500m
 *.nodeMaster[*].**.cy = 500m
 *.nodeMaster[*].**.cz = 0m
-*.nodeMaster[*].**.r = 250m
+*.nodeMaster[*].**.r = 50m
 *.nodeMaster[*].**.startAngle = parentIndex() * (360deg/${NM})
 
 *.nodeSlave[*].mobilityType = "CircleMobility"
 *.nodeSlave[*].**.cx = 500m
 *.nodeSlave[*].**.cy = 500m
 *.nodeSlave[*].**.cz = 0m
-*.nodeSlave[*].**.r = 275m
-*.nodeSlave[..5].**.startAngle = (parentIndex() * (360deg/${NM})) + 10deg
-#*.nodeSlave[6..].**.startAngle = (parentIndex() * (360deg/${NM})) - 10deg # The rest?
+*.nodeSlave[*].**.r = 75m
+*.nodeSlave[0].**.startAngle = (parentIndex() * (360deg/${NM})) + 5deg
+*.nodeSlave[1].**.startAngle = (parentIndex() * (360deg/${NM})) - 5deg # The rest
 # Not working
 #*.nodeSlave[..((${NS}/${SPM})-1)].**.startAngle = ((parentIndex()/${SPM}) * (360deg/${NM})) + 5deg
 #*.nodeSlave[(${NS}/${SPM})..].**.startAngle = ((parentIndex()/${SPM}) * (360deg/${NM})) - 5deg # The rest?
